# cloudopt

./: .gitignore  Analyzer.md  Collector.md  HOW_TO.md  How-To.md  README.md  REPORTER.md  pyproject.toml  scope.example.txt
.github/workflows/: ci.yml
docs/: RECOMMENDATIONS_CATALOG.md
docs/query_pack/: README.md  datadog.md  dynatrace.md  elastic.md  newrelic.md  prometheus.md  splunk.md
src/cloudopt/: __init__.py  cli.py  config.py  models.py  scope.py
src/cloudopt/analyzer/: archetype.py  confidence.py  grouping.py  recommendations.py  sku_catalog.py  taxonomy.py
src/cloudopt/collector/: advisor.py  alerts.py  appinsights.py  auth.py  capacity_reservations.py  deployment_failures.py  disks.py  inventory.py  (+9 more)
tests/: smoke_excel.py  test_archetype.py  test_collector_capacity_reservations.py  test_collector_deployment_failures.py  test_collector_disks.py  test_collector_reservations.py  test_confidence.py  test_confidence_score.py  test_deployment_failures.py  test_detectors_burstable.py  test_detectors_cleanup.py  test_detectors_dcm_idl.py  test_detectors_decom.py  test_detectors_disk_pv2.py  test_detectors_diskless.py  test_detectors_quota.py  test_detectors_reservations.py  test_detectors_rightsize.py  test_detectors_smoke.py  test_detectors_swap.py  test_enrichment.py  test_export.py  test_finding_model.py  test_inventory.py  test_memory_quality.py  test_metrics.py  test_models.py  test_ops_hygiene.py  test_quota_recommendations.py  test_recommendations.py  test_scope.py  test_status.py  test_taxonomy.py  test_throttle_and_quota_filter.py  test_zones.py
(+28 files in other folders)
