[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudopt"
version = "0.1.0"
description = "Collect Azure VM inventory and performance metrics for capacity analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.16.0",
    "azure-mgmt-resourcegraph>=8.0.0",
    "azure-mgmt-monitor>=6.0.0",
    "azure-mgmt-compute>=30.0.0",
    "azure-mgmt-subscription>=3.1.1",
    "azure-mgmt-consumption>=10.0.0",
    "azure-mgmt-loganalytics>=13.0.0",
    "azure-monitor-query>=1.3.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "httpx>=0.27.0",
]

[project.scripts]
cloudopt = "cloudopt.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudopt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/cloudopt"]
omit = ["*/tests/*"]
